--- a/style.css
+++ b/style.css
@@ -176,6 +176,14 @@ ul, li, ol{
 	padding: 0px;
 }
 
+.github {
+
+   position: absolute;
+    left: 15%;
+    top: -35px;
+    margin: 0px;
+    padding: 0px;
+}
 
 /*------------------------------------------------------------------
     WP CORE
@@ -459,7 +467,7 @@ xclip
     padding-top: 10px;
     padding-bottom: 10px;
     background-color: #333333;
-}
+} /* banner do top - Menu de Navegação */
 
 #clouds{
 	margin-top: -5%;
@@ -575,8 +583,6 @@ xclip
     color: #ffffff;
 }
 
-
-
 .btn-hover-new{
 	color: #333333;
 	-webkit-transition: all 0.5s;
@@ -627,29 +633,30 @@ xclip
 	color: #ffffff;
 	background-color: #333333;
 }
+
 .btn-hover-new:hover > span {
     opacity: 0;
     -webkit-transform: translate(0px,40px);
     transform: translate(0px,40px);
 }
+
 .btn-hover-new:hover::after {
     opacity: 1;
     -webkit-transform: translate(0, 0);
     transform: translate(0, 0);
 }
 
-
-
-
 .right-box-pro{
 	position: relative;
 	-webkit-box-shadow: 0px 0px 30px -4px rgba(0, 0, 0, 0.3);
 	box-shadow: 0px 0px 30px -4px rgba(0, 0, 0, 0.3);
 }
+
 .right-box-pro img{
 	position: relative;
 	z-index: 2;
 }
+
 .right-box-pro::before {
     content: "";
     background: url(images/country-quilt-dark.png);
@@ -661,28 +668,28 @@ xclip
     z-index: 0;
 }
 
-
-
 .services-inner-box{
 	padding: 15px;
 	background: #ffffff;
 	margin-bottom: 30px;
 }
+
 .ser-icon{
 	width: 90px;
 	height: 90px;
 	text-align: center;
 	line-height: 90px;
 }
+
 .ser-icon i{
 	font-size: 50px;
 	color: #333333;
 }
+
 .services-inner-box h2{
 	font-size: 22px;
 	font-weight: 600;
 }
-
 
 /*------------------------------------------------------------------
     PORTFOLIO
@@ -814,7 +821,6 @@ xclip
     line-height: 40px;
     text-align: center;
 }
-
 
 /*------------------------------------------------------------------
     TESTIMONIALS
