--- a/style.css
+++ b/style.css
@@ -1095,7 +1095,7 @@ xclip
 
 
 /*------------------------------------------------------------------
-    MESSAGE BOXES
+    MENSAGENS DE CAIXA
 -------------------------------------------------------------------*/
 
 .event_dit{
@@ -2229,8 +2229,9 @@ select.mobile-device {
     box-sizing: border-box;
     width: 100%;
     text-align: left;
-    padding: 30px 0px;
+    padding: 30px 15px;
     overflow: hidden;
+    
 }
 
 
