limpando o código HTML

--- a/style.css
+++ b/style.css
@@ -185,6 +185,12 @@ ul, li, ol{
     padding: 0px;
 }
 
+/* .frontend1 {
+    position: relative;
+    top: 10px;
+    left: 45%;
+} */
+
 /*------------------------------------------------------------------
     WP CORE
 -------------------------------------------------------------------*/
